--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,18 @@
     <meta name="theme-color" content="#FFFFFF" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Track the sentiment of users on trending and controversial people from different fields, including politics, business, media and entertainment."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Rule of Thumb™</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
